--- a/myapp/src/Components/Layout/Component.css
+++ b/myapp/src/Components/Layout/Component.css
@@ -65,13 +65,10 @@
 
   .sidebar {
     width: 15%;
-    height: auto;
-    min-height: 200%;
+    height:100%;
     position: fixed;
     top: 14%;
-    box-shadow: 2px 2px 3px #6fd7c7ca;
     left: 0;
-    /* background-color: #F7B733; */
     overflow: hidden;
     padding: 1rem;
     transition: width 10;
@@ -114,6 +111,7 @@
     width: 100%;
   }
   .home-content{
+    margin-top: 20%;
     width: 100%;
     flex-direction: column;
     margin: auto;
@@ -127,10 +125,10 @@
 
   .menu-toggle1 {
     position: absolute;
-    top: 2%;
-    color: rgb(0, 0, 0);
-    padding: 5px;
-    margin: 4px;
+    top: 0%;
+    color:black;
+    padding: 0px;
+    margin: 0px;
     position: fixed;
     border-radius: 3px;
     z-index: 666;
@@ -153,6 +151,7 @@
   .sidebar.active{
     display: flex;
     flex-direction: column;
+    font-size: smaller;
     align-items:center;
     visibility: visible;
     background-color: #ffffff;
